apps/production/beszel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beszel
  labels:
    app.kubernetes.io/name: beszel
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
