apps/production/beszel/daemonset-patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: beszel-agent
  namespace: beszel
spec:
  template:
    spec:
      containers:
        - name: beszel-agent
