apps/production/beszel/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: beszel-agent
  namespace: beszel
spec:
  selector:
    matchLabels:
      app: beszel-agent
  template:
    metadata:
      labels:
        app: beszel-agent
    spec:
      hostNetwork: true
      containers:
        - env:
            - name: LISTEN
              value: "45876"
            - name: KEY
              value: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFtkHpdRf++PWFRnVJFmH793bv8aSP8xbxY0ROhkEAxC
            - name: TOKEN
              valueFrom:
                secretKeyRef:
                  name: beszel-secret
                  key: apiKey
            - name: HUB_URL
              value: https://beszel.kennyandries.com
          image: henrygd/beszel-agent:0.17.0
          name: beszel-agent
          ports:
            - containerPort: 45876
              hostPort: 45876
      restartPolicy: Always
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
  updateStrategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 100%
    type: RollingUpdate
