apps/production/beszel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beszel
  namespace: beszel
  labels:
    app.kubernetes.io/name: beszel
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.kennyandries.com
spec:
  rules:
    - host: "beszel.kennyandries.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: beszel
                port:
                  number: 8090
